2007-02-10  Philip Van Hoof  <pvanhoof@gnome.org>

	* Various bugfixes for the IDLE feature
	* Error reporting for the TnySendQueue
	* Bugfix for the Maildirs of the tnycamelsendqueue

	* This was a major API change

2007-02-08  Philip Van Hoof  <pvanhoof@gnome.org>

	* Removed the public constructor of TnyCamelFolder, use the private
	one if you really need it (normal people don't, and you can make the
	library crash of you use it wrongfully)
	* A factory for TnyCamelFolder instances will be put in place soon.

	* This was a major API change

2007-02-07  Philip Van Hoof  <pvanhoof@gnome.org>

	* Support for non-blocking read in the SSL streams
	* Various bugfixing on the IDLE feature
	* Various bugfixing on summaries and disconnecting, reconnecting

2007-02-06  Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>

	* update TnyMaemoDevice

2007-02-06  Philip Van Hoof  <pvanhoof@gnome.org>

	* Support for IMAP IDLE (RFC 2177)

2007-02-05  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bugfix for issue #10

2007-02-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* CamelDiscoStore and CamelDiscoFolder implementation of the POP3
	provider of camel-lite. This means that the POP3 support now supports
	offline viewing E-mails
	* Changed a silly internal libtinymail-camel API

	* This was a major API change in libtinymail-camel

2007-01-31  Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>
	
	* fix some camel leaks

2007-01-31  Sergio Villar Senin <svillar@igalia.com>

	* libtinymail-camel/tny-session-camel: fixed some wrong
	initializations

2007-01-31  Philip Van Hoof  <pvanhoof@gnome.org>

	* Support for BINARY responses from IMAP servers that have the BINARY
	capability

2007-01-30  Philip Van Hoof  <pvanhoof@gnome.org>

	* Little bugfix. Max line size of an E-mail is now MAX_LINE_SIZE
	* Cleaning up old code, fixing bug in the tny-session-camel.c
	* Cleaned up the support for POP3 in tny-camel-pop-store-account.c
		* Cleaned up the connecting
		* Cleaned up the disabled old code
